# sweetPeaBush

./: .env  .gitignore  r
dev/: build_sweetbean_info.py
playground/paper_extract/: main.py
playground/paper_extract/WeindelEtAl2021/artifacts/data_raw/markers/M2/: S10  S12  S13  S14  S15  S16  S17  S2  S4  S5  S6  S7  S9  s3
playground/paper_extract/WeindelEtAl2021/artifacts/data_raw/markers/PhD/: S1  S10  S11  S12  S13  S14  S15  S16  S2  S3  S4  S5  S6  S7  S8  S9
playground/paper_extract/ZivonyEtEimer2021/artifacts/data_raw/: FinalSample - ERP - PO7-PO8-difference-wave.xlsx  FinalSample - behavioural.xlsx
playground/paper_extract/leg/GhasemiEtAl2022/artifacts/data_raw/osfstorage-archive/: tidy_data1.csv  tidy_data2.csv  tidy_data3A.csv  tidy_data3B.csv
playground/paper_extract/leg/HughesEtAl2020/artifacts/data_raw/shared features - measures, data and code/__MACOSX/: ._readme.md
playground/paper_extract/leg/HughesEtAl2020/artifacts/data_raw/shared features - measures, data and code/__MACOSX/analysis/: ._analysis.Rmd  ._analysis.html  ._processing.Rmd  ._processing.html
playground/paper_extract/papers/GhasemiEtAl2022/: README.txt  sequence_empirical.py  sequence_sweetpea.py
playground/paper_extract/papers/HughesEtAl2020/: README.txt  sequence_empirical.py  sequence_sweetpea.py
src/: main.py  output.csv  pyproject.toml  simulate.py
src/sweetPeaBush/: utils.py
src/sweetPeaBush/crossings/: validate.py
src/sweetPeaBush/design/: validate.py
src/sweetPeaBush/validate/: crossing.py  design.py
src/test_project/: ground_paradigm.py  main.py
(+12 files in other folders)
